--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.12.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "http-server": "^14.1.1",
     "promises": "^0.2.5",
