--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "react",
-    "lib": ["dom", "es6"]
+    "lib": ["dom", "es2017"],
+    "types": ["p5"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
